--- a/index.ipynb
+++ b/index.ipynb
@@ -52,17 +52,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
-    "# %load_ext autoreload\n",
-    "# %autoreload 2"
+    "#%load_ext autoreload\n",
+    "#%autoreload 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,20 +80,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import Driver class here"
+    "# import Driver class here\n",
+    "from driver import Driver"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import Passenger class here"
+    "# import Passenger class here\n",
+    "from passenger import Passenger"
    ]
   },
   {
@@ -103,12 +114,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<passenger.Passenger object at 0x000001A5AAB3CEF0> <passenger.Passenger object at 0x000001A5AAB3CEB8>\n"
+     ]
+    }
+   ],
    "source": [
-    "meryl = None\n",
-    "daniel = None\n",
+    "meryl = Passenger()\n",
+    "daniel = Passenger()\n",
     "print(meryl, daniel)"
    ]
   },
@@ -121,11 +140,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<driver.Driver object at 0x000001A5AAB3C940>\n"
+     ]
+    }
+   ],
    "source": [
-    "flatiron_taxi = None\n",
+    "flatiron_taxi = Driver()\n",
     "print(flatiron_taxi)"
    ]
   },
@@ -138,14 +165,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<ride.Ride object at 0x000001A5AAB4A080> <ride.Ride object at 0x000001A5AAB4A048>\n"
+     ]
+    }
+   ],
    "source": [
-    "ride_to_school = None\n",
-    "ride_home = None\n",
+    "ride_to_school = Ride()\n",
+    "ride_home = Ride()\n",
     "print(ride_to_school, ride_home)"
    ]
   },
@@ -160,9 +195,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -174,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
